--- a/css/fixedcss.css
+++ b/css/fixedcss.css
@@ -9,39 +9,37 @@ body {
     height: 100vh;
 }
 
-h1,
-h2,
-h3 {
+h1, h2, h3 {
     font-weight: 900;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 h1 {
     color: navy;
-    tex
 }
 
 p {
     margin: 10px;
-    padding: 5px font-family: Arial, Helvetica, sans-serif;
+    padding: 5px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 section {
     border: 1px solid green;
     margin: 10px;
-    bacground-color: #333;
+    background-color: #333;
     color: #fff;
 }
 
 aside {
     font-style: italic;
-    letter-spacing=1.2pt;
-
-
-    footer {
-        border-bottom: 1px solid #000;
-        border-top: 1px solid #000;
-        padding: 5px;
-        margin-t: 10px;
-    }
+    letter-spacing: 1.2pt;
 }
+
+footer {
+    border-bottom: 1px solid #000;
+    border-top: 1px solid #000;
+    padding: 5px;
+    margin-top: 10px;
+}
+
