--- a/css/w6.css
+++ b/css/w6.css
@@ -39,3 +39,198 @@ body {
     background-color: blue;
     grid-column: 1/3;
   }
+
+  /* Activity 2 styles */
+
+
+.red2 {
+  width: 100px;
+  height: 100px;
+  background-color: red;
+  margin-bottom: 175px;
+}
+
+.green2 {
+  width: 100px;
+  height: 100px;
+  background-color: green;
+  position: absolute;   
+  left: 75px;
+  top: 125px;
+}
+
+.gold2 {
+  width: 100px;
+  height: 100px;
+  background-color: gold;
+  position: absolute;   
+  left: 125px;
+  top: 175px;
+}
+
+.blue2 {
+  width: 100px;
+  height: 100px;
+  background-color: blue;
+  position: absolute;   
+  left: 175px;
+  top: 225px;
+}
+
+/* Activity 3 styles */
+.content3 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  max-width: 600px;
+}
+
+.red3 {
+  width: 100%;
+  height: 100px;
+  background-color: red;
+  grid-column: 1/3;
+}
+
+.green3 {
+  width: 275px;
+  height: 200px;
+  background-color: green;
+}
+
+.gold3 {
+  width: 275px;
+  height: 200px;
+  background-color: gold;
+  justify-self: end;
+  
+}
+
+.blue3 {
+  width: 100%;
+  height: 100px;
+  background-color: blue;
+  grid-column: 1/3;
+}
+
+/* Activity 4 styles */
+.content4 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  max-width: 600px;
+}
+
+.red4 {
+  width: 100%;
+  height: 300px;
+  background-color: red;
+  grid-column: 1/2;
+  grid-row: 1/4;
+}
+
+.green4 {
+  width: 100%;
+  height: 100px;
+  background-color: green;
+  grid-column: 2/3;
+}
+
+.gold4 {
+  width: 100%;
+  height: 100px;
+  background-color: gold;
+  grid-column: 2/3;
+}
+
+.blue4 {
+  width: 100%;
+  height: 100px;
+  background-color: blue;
+  grid-column: 2/3;
+}
+
+/* Activity 5 styles */
+
+.red5 {
+  width: 600px;
+  height: 100px;
+  background-color: red;
+}
+
+.green5 {
+  width: 200px;
+  height: 200px;
+  margin-right: 10px;
+  background-color: green;
+  float: left;
+}
+
+.gold5 {
+  width: 600px;
+  height: 400px;
+  background-color: gold;
+}
+
+.blue5 {
+  width: 600px;
+  height: 100px;
+  background-color: blue;
+}
+
+.paragraph5 {
+    margin: 0px;
+    padding: 10px;
+}
+
+/* Activity 6 styles */
+.content6 {
+  display: grid;
+  grid-template-columns: 100px 100px 100px 100px 100px 100px;
+  grid-template-rows: 100px 100px 100px 100px 100px 100px;
+}
+
+.red6 {
+  width: 400px;
+  height: 200px;
+  background-color: red;
+  z-index: -3;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  grid-column-start: 1;
+  grid-column-end: 5;
+}
+
+.green6 {
+  width: 200px;
+  height: 200px;
+  background-color: green;
+  z-index: -1;
+  grid-row-start: 5;
+  grid-row-end: 7;
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+
+.gold6 {
+  width: 200px;
+  height: 400px;
+  background-color: gold;
+  z-index: -1;
+  grid-row-start: 3;
+  grid-row-end: 7;
+  grid-column-start: 5;
+  grid-column-end: 7;
+}
+
+.blue6 {
+  width: 400px;
+  height: 400px;
+  background-color: blue;
+  z-index: -2;
+  grid-row-start: 2;
+  grid-row-end: 6;
+  grid-column-start: 2;
+  grid-column-end: 6;
+}
+
+
+
