--- a/project/css/style.css
+++ b/project/css/style.css
@@ -4,7 +4,7 @@
 
 :root {
     --primary-color: #8E9DCC;
-    --secondary-color: #7D84B2;
+    --secondary-color: #5e67a1;
     --accent1-color: #FEF9FF;
     --accent2-color: #D9DBF1;
     --heading-font: Epilogue;
@@ -21,6 +21,8 @@
     margin-right: 10px;
     padding: 5px 5px 0px;
     text-decoration: none;
+    white-space: nowrap;
+    width: 25%;
 
 }
 .navlink:hover {
@@ -33,19 +35,26 @@ main, .picturemain, section, .divhomeaway, .divwedding, .divsearch, .insection, 
 
 header, main, footer {
     max-width: 960px;
+    width: 100%;
     margin: 0 auto;
   }
 
-    .title {
+.title {
       margin-bottom: 0px;
       margin-left: 10px;
       padding-bottom: 0px;
       font-family: var(--heading-font), "Lucida Grande", sans-serif;
       font-size: 2rem;
       color:  var(--accent2-color);
+      white-space: nowrap;
       
   }
   
+  nav{
+    max-width: 50%;
+    max-width: 480px;
+  }
+
  .mainnavlink {
      margin-top: 3rem;
      list-style-type: none;
@@ -53,13 +62,13 @@ header, main, footer {
      flex-direction: row;
      font-family: var(--heading-font), "Lucida Grande", sans-serif;
      font-size: .9rem;
-     
  }
 
  .logotitle {
      display:flex;
      flex-direction: row;
      align-items: baseline;
+     max-width: 480px;
  }
 
  header {
@@ -67,6 +76,7 @@ header, main, footer {
      flex-direction: row;
      justify-content: space-between;
      align-items: baseline;   
+     max-width: 960px;
  }
 
  h2 {
@@ -207,12 +217,17 @@ h3 {
     font-family: var(--heading-font), Arial, Helvetica, sans-serif;
     color: var(--accent1-color);
     background-color:rgba(142, 157, 204, 0) ;
+    white-space: nowrap;
 }
 
 button {
     font-family: var(--paragraph-font), Arial, Helvetica, sans-serif;
     color: var(--accent1-color)
     font
+}
+
+.banner{
+    width: 100%;
 }
 
 .banner-box {
@@ -229,7 +244,8 @@ button {
 /******* Media Quary ********/
 
 @media screen and (max-width: 550px) {
-    .______ {
+    .calltoaction, .homeaway, .weddingreceptions {
       display: block;
     }
-  }
+}
+
