--- a/project/css/style.css
+++ b/project/css/style.css
@@ -159,7 +159,7 @@ main {
 .searchparagraph {
     padding-right: 3rem;
     padding-left: 3rem;
-    color: var(--secondary-color) 
+    color: var(--secondary-color); 
 }
 
 .contact {
@@ -229,7 +229,6 @@ h3 {
 button {
     font-family: var(--paragraph-font), Arial, Helvetica, sans-serif;
     color: var(--accent1-color)
-    font
 }
 
 .banner{
