--- a/project/css/style.css
+++ b/project/css/style.css
@@ -228,7 +228,7 @@ h3 {
 
 button {
     font-family: var(--paragraph-font), Arial, Helvetica, sans-serif;
-    color: var(--accent1-color)
+    color: var(--secondary-color);
 }
 
 .banner{
