--- a/css/site-plan.css
+++ b/css/site-plan.css
@@ -3,10 +3,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap');
 
 :root {
-    --primary-color: #E09F3E;
-    --secondary-color: #F2EFE9;
-    --accent1-color: #F6E7CB;
-    --accent2-color: #010400;
+    --primary-color: #8E9DCC;
+    --secondary-color: #5e67a1;
+    --accent1-color: #FEF9FF;
+    --accent2-color: #D9DBF1;
     --heading-font: Epilogue;
     --paragraph-font: Hind;
 }
@@ -28,7 +28,7 @@ img {
 
 h1, h2, h3, h4, h5, h6 {
     font-family: var(--heading-font);
-    color: var(--primary-color);
+    color: var(--secondary-color);
 }
 
 header {
@@ -44,7 +44,7 @@ header>h1 {
 
 p {
     font-family: var(--paragraph-font);
-    color: var(--accent2-color);
+    color: var(--secondary-color);
     padding: 1em
 }
 
@@ -74,12 +74,10 @@ p {
 
 .accent1 {
     background-color: var(--accent1-color);
-    color: white;
 }
 
 .accent2 {
     background-color: var(--accent2-color);
-    color: white;
 }
 
 nav {
